<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where Am I?</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Location</string>
    <string name="title_section2">Map</string>

	<string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu?</string>
    
	<string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    
    <string name="latitude">Latitude :    </string>
    <string name="longitude">Longitude :   </string>
    <string name="country">Country :     </string>
    <string name="city">City :        </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address :     </string>
    <string name="timezone">Time Zone :   </string>
    <string name="sunrise">Sunrise : </string>
    <string name="sunset">Sunset : </string>
    
    <string name="preferences">Settings</string>
    <string name="send_gps">Send Location</string>
    <string name="refresh_gps">Refresh Location</string>
    
    <string name="map_type_title">Map Type</string>
    <string name="map_type_summary">The type of map to display</string>
    
    <string name="show_traffic">Show Traffic</string>
    <string name="show_traffic_summary">Overlay traffic on the map</string>
    
    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>
    
    
</resources>
